<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="janbrodhaecker.de.bitcointracker.MainActivity">

    <TextView
        android:id="@+id/tvLastUpdateLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="12dp"
        android:text="Last Update:"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvLastUpdateVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="-"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvLastUpdateLbl" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="477dp"
        android:orientation="vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/dpCurrency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvCurrentCourseVal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:text="-"
            android:textAlignment="center"
            android:textSize="26sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPriceDayVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="2dp"
                android:text="-"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/tvPercentDayVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="2dp"
                android:text="-" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingTop="5dp"
            app:srcCompat="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTodaysOpenVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="-"
                    android:textAlignment="textStart" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTodaysOpenLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_todays_open"
                    android:textSize="8sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTodaysHighVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="-"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/tv24AverageVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="-"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTodaysHighLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_todays_high"
                    android:textSize="8sp" />

                <TextView
                    android:id="@+id/tv24AverageLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_24_average"
                    android:textAlignment="textEnd"
                    android:textSize="8sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTodaysLowVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="-"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/tvGlobalValueVal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="-"
                    android:textAlignment="textEnd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTodaysLowLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_todays_low"
                    android:textSize="8sp" />

                <TextView
                    android:id="@+id/tvGlobalValueLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_global_val"
                    android:textAlignment="textEnd"
                    android:textSize="8sp" />
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/chartContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <lecho.lib.hellocharts.view.LineChartView
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp" />

        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
